--- a/MINGGU4/TUGAS 4.html
+++ b/MINGGU4/TUGAS 4.html
@@ -1,25 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Document</title>
+    <title>FORM MAHSISWA</title>
 </head>
 <body>
-    <h3>Form Mahasiwa</h3>
+    <h3 align="center">FORM MAHSISWA UDINUS</h3>
     <form id="form1" name="form1" method="post" action="kirim.php">
 
-        <table> 
+        <table align="center"> 
             <tr>
                 <td>NIM</td>  
                 <td> <input type="number" name="fnin"></td>
             </tr>
-            <td>Nama</td>  
+            <td>NAMA</td>  
             <td> <input type="text" name="fnama"></td>
         </tr>
         <tr>
-            <td>program studi</td>
+            <td>PROGAM STUDI</td>
             <td>
                 <select name="fprodi">
-                    <option value="">pilih program study anda</option>
+                    <option value="">PROGAM STUDY</option>
                     <option value="A11">S1 - TI</option>
                     <option value="A12">S1 - SI</option>
                     <option value="A22">D3 - TI</option>
@@ -27,18 +27,18 @@
             </td>
         </tr>
         <tr>
-            <td>Tanggal lahir</td>
+            <td>TANGGAL LAHIR</td>
             <td><input type="date" name="ftgl_lhr"></td>
         </tr>
         <tr>
-            <td>Hobby</td>
+            <td>HOBBY</td>
             <td>
                 <input type="checkbox" name="Hobby1" value="101">
-                <label for="Hobby1">web Dev</label>
+                <label for="Hobby1">WEB DEV</label><br>
                 <input type="checkbox" name="Hobby2" value="102">
-                <label for="Hobby2">game Dev</label>
+                <label for="Hobby2">GAME DEV</label><br>
                 <input type="checkbox" name="Hobby3" value="103">
-                <label for="Hobby3">app Dev</label>
+                <label for="Hobby3">APP DEV</label><br>
             </select>
         </td>
         
