--- a/MINGGU6/kontak.html
+++ b/MINGGU6/kontak.html
@@ -3,12 +3,16 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initialscale=1.0">
+    <meta name="description" content="kontak">
+    <meta name="keywords" content="HTML">
+    <meta name="author" content="DANIEL">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal Website</title>
+    <link rel="icon" type="image/x-icon" href="/images/43.ico">
     <style>
         body{
             size: auto;
-            background-image: url(5.jpg);
+            background-image: url(23.jpg);
             background-size: cover;
             width: 100%;
             height: 100vh;
@@ -46,19 +50,21 @@
         <h1>Kontak Saya </h1>
         <form>
             <label for="email">Email</label><br />
-            <input type="email" name="email" placeholder="alamat
-email" />
+            <input type="email" name="email" placeholder="Alamat Email" />
+            <br />
+            <label for="contact">Nomer Yang bisa dihubungi</label><br />
+            <input type="contact" name="contact" placeholder="Nomer Handphone" />
             <br />
             <label for="message">Pesan</label><br />
             <textarea name="message" placeholder="Tulis pesan anda..." rows="4" cols="80"></textarea>
             <br />
             <br />
-            <input type="submit" value="Kirim" />
+            <input type="submit" value="kirim" />
         </form>
     </div>
     <hr>
     <footer style="text-align: center;">
-        <p>Copyright &copy; 2020 namaku.</p>
+        <p>Copyright &copy; 2020 DANIEL.</p>
     </footer>
 </body>
 
