--- a/MINGGU6/tentang.html
+++ b/MINGGU6/tentang.html
@@ -3,12 +3,16 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initialscale=1.0">
+    <meta name="description" content="tentang">
+    <meta name="keywords" content="HTML">
+    <meta name="author" content="DANIEL">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal Website</title>
+    <link rel="icon" type="image/x-icon" href="/images/43.ico">
     <style>
         body{
             size: auto;
-            background-image: url(5.jpg);
+            background-image: url(23.jpg);
             background-size: cover;
             width: 100%;
             height: 100vh;
@@ -64,7 +68,7 @@
     </article>
     <hr>
     <footer style="text-align: center;">
-        <p>Copyright &copy; 2020 namaku.</p>
+        <p>Copyright &copy; 2020 DANIEL.</p>
     </footer>
 </body>
 
