--- a/MINGGU6/index.html
+++ b/MINGGU6/index.html
@@ -2,14 +2,17 @@
 <html lang="en"> 
  
 <head> 
-    <meta charset="UTF-8"> 
-    <meta name="viewport" content="width=device-width, initial-
-scale=1.0"> 
+    <meta charset="UTF-8">
+    <meta name="description" content="index">
+    <meta name="keywords" content="HTML">
+    <meta name="author" content="DANIEL">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     <title>Contoh Project Pemrograman Website</title> 
+    <link rel="icon" type="image/x-icon" href="/images/43.ico">
 <style>
     body{
         size: auto;
-        background-image: url(5.jpg);
+        background-image: url(23.jpg);
         background-size: cover;
         width: 100%;
         height: 100vh;
@@ -92,8 +95,8 @@ scale=1.0">
             </div> 
          
             <hr> 
-            <footer style="text-align: center;"> 
-                <p>Copyright &copy; 2020 Namaku.</p> 
+            <footer style="text-align: center; box-shadow: 0ch 8px 0 8px gray;"> 
+                <p>Copyright &copy; 2020 DANIEL.</p> 
             </footer> 
         </body> 
         </html> 
